# Durin

./: .claudeignore  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Snakefile  config.yaml  docker-compose.yml  main.py  pyproject.toml  recover_chembl_cids.py
_management/: 2026-07-18-pharmacovigilance-neo4j-migration.md
docs/: docker.md  graph_enrichment.md  neo4j_graph_mig.md  ph_data_pipeline.md  pydantic_models.md  risk_engine.md  snakemake_etl.md
docs/superpowers/plans/: 2026-07-11-pharmacovigilance-enrichment.md  2026-07-18-graph-enrichment-notebook.md
docs/superpowers/specs/: 2026-07-11-pharmacovigilance-enrichment-design.md  2026-07-11-risk-engine-design.md  2026-07-18-graph-enrichment-notebook-design.md  2026-07-21-snakemake-etl-orchestration-design.md
notebooks/: 1.0-adf-atc-scraper-and-catalog.ipynb  2.0-adf-pydantic-models.ipynb  3.0-adf-agency-models.ipynb  4.0-adf-graph-enrichment.ipynb  5.0-adf-llm-normalizer-test.ipynb  README.md
scripts/: atc_scraper.py  build_pharmacovigilance.py  build_rxnorm_map.py  codes.json  icd10_scraper.py  icd_codes.json  json_plain.py  source.tsv
src/: config.py
src/data/: enrichment.py  pubchem.py  repository.py  schemas.py  sources.py
src/data/agencies/: __init__.py  base.py  cima.py
src/data/atc/: icd10_codes.json
src/data/pharmacovigilance/: LLM_Prompt.md  db.py  graph.py  normalizer.py
src/data/schemas/: __init__.py  base.py  drug.py  medication.py  patient.py  types.py
src/locales/: en.json5  es.json5  loader.py
src/risk/: __init__.py  engine.py  models.py  severity.py  stores.py
src/risk/evaluators/: __init__.py  adverse_effect.py  age_modifier.py  base.py  drug_disease.py  drug_drug.py
src/utils/: logging.py
tests/: conftest.py  test_agencies.py  test_build_pharmacovigilance.py  test_enrichment.py  test_logging.py  test_normalizer.py  test_repository.py  test_risk_engine.py  test_risk_evaluators.py  test_risk_models.py  test_risk_severity.py  test_risk_stores.py  test_schemas.py  test_sources.py
