[project]
name = "durin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "json5>=0.15.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
# target-version intentionally omitted: inferred from requires-python (>=3.14),
# so lint/format re-targets automatically when the project's Python bumps.
extend-exclude = ["notebooks", ".venv", "data", "models", "graphify-out"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings (W291/W293 trailing & blank-line whitespace)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (Optional[x]->x|None, List->list, etc.)
]
